# s3m-spec

./: .gitignore  README.md  ReleaseNotes.md
ConversionTool/SuperMap_Data_Convert/: 3D-tiles转换工具说明.txt  SuperMap_Data_Convert.lnk
ConversionTool/SuperMap_Data_Convert/SuperMap_Data_Convert/: EPSFont.xml  Marker.sym  SmGeoRaserMetadata_MultiBand.xml  SuDrawing3D.dwi  SuEngineDB2.sdx  SuEngineDRDS.sdx  SuEngineDataServer.sdx  SuEngineExtendFile.sdx  SuEngineGBase.sdx  SuEngineGP.sdx  SuEngineGoogleMaps.sdx  SuEngineHWPG.sdx  SuEngineKDB.sdx  SuEngineMapWorldMaps.sdx  SuEngineMongoDB.sdx  SuEngineOracle.sdx  SuEnginePG.sdx  SuEngineRest.sdx  SuEngineSCV.sdx  SuEngineSMCloud.sdx  SuEngineSQLPLUS.sdx  SuEngineSRDB.sdx  SuEngineShenTong.sdx  SuEngineSsp.sdx  SuEngineTibero.sdx  SuFileParserBGRID.fps  SuFileParserBMP.fps  SuFileParserECW.fps  SuFileParserEGC.fps  SuFileParserENC.fps  SuFileParserGEOJSON.fps  SuFileParserGJB.fps  SuFileParserGRIB.fps  SuFileParserGTiff.fps  SuFileParserGeo3DML.fps  SuFileParserHDFS.fps  SuFileParserHFA.fps  SuFileParserKML.fps  SuFileParserLidar.fps  SuFileParserMitab.fps  (+25 more)
ConversionTool/XML+OSGToUDB/XML+OSGToUDB/: Form1.Designer.cs  Form1.cs  Program.cs
ConversionTool/XMLAndOSGToUDB/: XML+OSGToUDB.sln
ConversionTool/XMLAndOSGToUDB/XML+OSGToUDB/: Form1.resx  XML+OSGToUDB.csproj
ConvertTool/: README.md  功能位置.docx
ConvertTool/IEarth_Qt/: ChartConfig.xml  CodeTransition.xml  Graphics3DDefaultFonts.xml  PrjConfig.xml  SuGeometry3D.geo  SuGeometryCAD.geo  SuGraphics3DOGRE.g3d  SuLayer3DDataset.l3d  SuLayer3DFile.l3d  SuPluginGECache.spi  SuPluginWebCache.spi  SuTheme3DBase.t3d  SuperMap.xml  resource.xml  resource.zh-CN.xml
ConvertTool/IEarth_Qt/ProjectionMappingTable/: EPSG_unit_of_measure.csv  epsg_proj4.csv  esriprjtype.csv  esriunittype.csv  makeuggcs.py  makeugpcs.py  miori.csv  miprj.csv  uggcs.csv  (+1 more)
ConvertTool/Latest/: README.md
ConvertTool/Latest(行标）/: README.md
ConvertTool/Latest(行标）/S3MBToolkit/: CMakeLists.txt
ConvertTool/Latest(行标）/S3MBToolkit/S3MBToolkit/Include/: B3DMWriter.h  Common.h  Dialog3DTilesToS3MB.h  DialogI3SToS3MB.h  DialogOBJToS3MB.h  DialogOSGBToS3MB.h  DialogS3MBTo3DTiles.h  GLTFContent.h  GLTFParser.h  I3SFormatStructure.h  I3SLepccDecoder.h  I3SParams.h  I3SParser.h  I3STool.h  I3STranslation.h  MathEngine.h  ProcessParams.h  ProcessThread.h  ProcessTools.h  S3MBToolkit.h  SlpkFile.h  ThreeDTilesParser.h  stdafx.h
ConvertTool/Latest(行标）/S3MBToolkit/S3MBToolkit/Include/Utils/: EndianUtil.h  Md5.h  Utils.h  ZipUtil.h
ConvertTool/Latest(行标）/S3MBToolkit/S3MBToolkit/Src/: B3DMWriter.cpp  Dialog3DTilesToS3MB.cpp  DialogI3SToS3MB.cpp  DialogOBJToS3MB.cpp  DialogOSGBToS3MB.cpp  DialogS3MBTo3DTiles.cpp  GLTFParser.cpp  I3SFormatStructure.cpp  I3SLepccDecoder.cpp  I3SParams.cpp  I3SParser.cpp  I3STool.cpp  I3STranslation.cpp  MathEngine.cpp  OBJConfig.cpp  OSGBParser.cpp  ProcessParams.cpp  ProcessThread.cpp  ProcessTools.cpp  S3MBParser.cpp  S3MBToolkit.cpp  SlpkFile.cpp  ThreeDTilesParser.cpp  Utils.cpp  main.cpp
ConvertTool/Latest(行标）/S3MBToolkit/S3MBToolkit/Src/Utils/: Md5.cpp  Utils.cpp  ZipUtil.cpp
ConvertTool/Latest/S3MBToolkit/: CMakeLists.txt
ConvertTool/Latest/S3MBToolkit/S3MBToolkit/Include/: Common.h  Dialog3DTilesToS3MB.h  DialogOBJToS3MB.h  DialogOSGBToS3MB.h  OBJConfig.h  OSGBParser.h  ProcessTools.h  S3MBParser.h  S3MBToolkit.h  S3MBToolkit.ui  Utils.h
ConvertTool/Latest/S3MBToolkit/S3MBToolkit/Src/: DialogOBJToS3MB.cpp  DialogOSGBToS3MB.cpp  DialogS3MBTo3DTiles.cpp  OBJConfig.cpp  S3MBToolkit.cpp
ConvertTool/Original/: README.md
Examples/: example_MongoDB.md  example_attribute.json.md  example_indextree.md  example_material.md  example_s3md.md  example_scp.md
S3M_SDK/: Readme.md  Readme.txt  S3MB_SDK_AtuoGetPakege.bat
S3M_SDK/BinD/: CodeTransition.xml  Microsoft.VC90.DebugCRT.manifest  SuFileParserS3MBd.fps  SuperMap.xml  resource.xml
S3M_SDK/S3M_JS/: 1.html  CBD.html  README.md  VUECaution.md  instance.html
S3M_SDK/S3M_Parser_JS/: CBD.html  Readme.md  helloworld.html  instance.html
S3M_SDK/S3M_SDK/: Readme.md  S3MB_SDK_AtuoGetPakege.bat
S3M_SDK/S3M_SDK_Lightweight package/: README.md  S3MB_SDK_2010.sln  S3MB_SDK_2012.sln  S3MB_SDK_2015.sln  S3MB_SDK_2017.sln  S3MB_SDK_2019.sln
S3M_SDK/S3M_SDK_Lightweight package/Latest(S3M 3.0&行标)/: CMakeLists.txt
S3M_SDK/S3M_SDK_Lightweight package/Latest(S3M 3.0&行标)/s3m/include/: Animation.h  BoundingBox.h  BoundingSphere.h  DracoTool.h  JsonValue.h  MemoryStream.h  Palette.h  Point3D.h  Quaternion.h  S3MBCommon.h  S3MBEnums.h  S3MBLayerInfos.h  S3MBTools.h  S3MBUtils.h  S3MBWriter.h  Skeleton.h  Texture.h  Variant.h
S3M_SDK/S3M_SDK_Lightweight package/Latest(S3M 3.0&行标)/s3m/src/: BoundingSphere.cpp  DracoTool.cpp  ImageOperator.cpp  JsonValue.cpp  Point3D.cpp  S3MBConfig.cpp  S3MBLayerInfos.cpp  S3MBTools.cpp  S3MBUtils.cpp  S3MBWriter.cpp  Shell.cpp  Texture.cpp  Variant.cpp  Vector.cpp
S3M_SDK/S3M_SDK_Lightweight package/Latest(S3M 3.0&行标)/sample/include/: ROGroupLite.h  S3MBAttributeReader.h
S3M_SDK/S3M_SDK_Lightweight package/Latest(S3M 3.0&行标)/sample/src/: ROGroupLite.cpp  main.cpp
S3M_SDK/S3M_SDK_Lightweight package/Latest(S3M 3.0&行标)/sampledata/attribute/: attribute.json
S3M_SDK/S3M_SDK_Lightweight package/Latest(S3M 3.0&行标)/sampledata/attribute/Tile_-97498_284474_0000/: Tile_-97498_284474_0000.s3md
S3M_SDK/Sample/: AltizureToS3MB.cpp  S3MBReader.cpp  S3MBWriter.cpp  S3MBWriter.h  Sample.vcxproj  main.cpp
S3M_SDK/lib/: SuBase.lib  SuBase3D.lib  SuBase3Dd.lib  SuBased.lib  SuCacheBuilder.lib  SuCacheBuilder3D.lib  SuCacheBuilder3Dd.lib  SuCacheBuilderd.lib  SuElement.lib  SuElementd.lib  SuFileParser.lib  SuFileParserd.lib  SuProjection.lib  SuProjectiond.lib  SuStream.lib  SuStreamd.lib  SuToolkit.lib  SuToolkit3D.lib  SuToolkit3Dd.lib  SuToolkitd.lib
Specification/: Indextree.md  S3MD.md  Specification.md  attribute.json.md  scp.json.md
Specification/S3MB/: Material.md  S3MB.md  S3MBBinary.md  Skeleton.md  Texture.md
Specification/ch/: 《三维空间数据瓦片格式》（征求意见稿）.doc
data/: demp.scp
figures/: s3m figures.pptx
(+2233 files in other folders)
